<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/home_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/landing_logo"
        android:contentDescription="@string/logo_text" />

    <TextView
        style="@style/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/twilio_first_line"
        android:id="@+id/textViewLine1"
        android:layout_below="@+id/imageViewLogo"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/twilio_second_line"
        android:id="@+id/textViewLine2"
        android:layout_below="@+id/textViewLine1"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/LoginButton"
        android:text="@string/forgot_password_go_back_button_text"
        android:id="@+id/buttonGoBack"
        android:layout_above="@+id/linearLayoutTextFields"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        style="@style/LoginElementSideMargin"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@color/login_tf_group_gray"
        android:layout_above="@+id/buttonSend"
        android:id="@+id/linearLayoutTextFields">

        <LinearLayout
            style="@style/LoginFormLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutEmail"
            android:layout_marginTop="7dp">

            <ImageView
                style="@style/LoginTextEditImage"
                android:background="@drawable/username_field_bg"
                android:contentDescription="@string/image_text"/>

            <EditText
                style="@style/LoginTextEdit"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email_placeholder"
                android:id="@+id/editTextEmail" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/LoginButton"
        android:text="@string/forgot_password_send_button_text"
        android:id="@+id/buttonSend"
        android:background="@color/login_button_background"
        android:layout_above="@+id/textViewForgotMessage"
        android:layout_marginBottom="10dp" />
    <TextView
        style="@style/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_password_message"
        android:id="@+id/textViewForgotMessage"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"/>
</RelativeLayout>